--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,14 +41,14 @@ jobs:
           ALGORITHM: ${{ secrets.ALGORITHM }}
           ACCESS_TOKEN_EXPIRE: ${{ secrets.ACCESS_TOKEN_EXPIRE }}
           REFRESH_TOKEN_EXPIRE: ${{ secrets.REFRESH_TOKEN_EXPIRE }}
-          EXPIRED_TOKEN: ${{ secrets.EXPIRED_TOKEN }}
+          # EXPIRED_TOKEN: ${{ secrets.EXPIRED_TOKEN }}
 
         run: |
           echo "SECRET_KEY=$SECRET_KEY"
           echo "ALGORITHM=$ALGORITHM"
           echo "ACCESS_TOKEN_EXPIRE=$ACCESS_TOKEN_EXPIRE"
           echo "REFRESH_TOKEN_EXPIRE=$REFRESH_TOKEN_EXPIRE"
-          echo "Length of EXPIRED_TOKEN: ${#EXPIRED_TOKEN}"
+          # echo "Length of EXPIRED_TOKEN: ${#EXPIRED_TOKEN}"
           echo "Environment variables set"
           pytest tests/
 
