--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ env:
   ACCESS_TOKEN_EXPIRE: ${{ secrets.ACCESS_TOKEN_EXPIRE }}
   REFRESH_TOKEN_EXPIRE: ${{ secrets.REFRESH_TOKEN_EXPIRE }}
   EXPIRED_TOKEN: ${{ secrets.EXPIRED_TOKEN }}
+  DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+  DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
 
 jobs:
   deploy:
@@ -41,8 +43,8 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/authsphere:latest .
-          docker push ${{ secrets.DOCKER_USERNAME }}/authsphere:latest
+          docker build -t $DOCKER_USERNAME/authsphere:latest .
+          docker push $DOCKER_USERNAME/authsphere:latest
 
       - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@v0.1.7
@@ -50,9 +52,10 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
+          envs: DOCKER_USERNAME,DOCKER_PASSWORD # Pass secrets as env variables
           script: |
-            echo "${{ secrets.DOCKER_PASSWORD }}" | sudo docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/authsphere:latest
+            printf "%s" "$DOCKER_PASSWORD" | sudo docker login -u "$DOCKER_USERNAME" --password-stdin
+            sudo docker pull $DOCKER_USERNAME/authsphere:latest
             sudo docker stop authsphere || true
             sudo docker rm authsphere || true
-            sudo docker run -d -p 8000:8000 --name authsphere ${{ secrets.DOCKER_USERNAME }}/authsphere:latest
+            sudo docker run -d -p 8000:8000 --name authsphere $DOCKER_USERNAME/authsphere:latest
