add refernce to .env file to read the environment variables for the app to run in container on EC2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,4 +58,7 @@ jobs:
             sudo docker pull $DOCKER_USERNAME/authsphere:latest
             sudo docker stop authsphere || true
             sudo docker rm authsphere || true
-            sudo docker run -d -p 8000:8000 --name authsphere $DOCKER_USERNAME/authsphere:latest
+            sudo docker run -d \
+            --env-file /home/ubuntu/authsphere/.env \
+            -p 8000:8000 \
+            --name authsphere $DOCKER_USERNAME/authsphere:latest
