logs to be copied to EC2 instance folder

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,3 +62,4 @@ jobs:
             --env-file /home/ubuntu/authsphere/.env \
             -p 80:8000 \
             --name authsphere $DOCKER_USERNAME/authsphere:latest
+            -v /home/authsphere/app_logs:/app/logs authsphere
