--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ env:
   EXPIRED_TOKEN: ${{ secrets.EXPIRED_TOKEN }}
   DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
   DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+  MYSQL_ROOT_PASSWORD: ${{secrets.MYSQL_ROOT_PASSWORD}}
 
 jobs:
   deploy:
@@ -46,21 +47,38 @@ jobs:
           docker build -t $DOCKER_USERNAME/authsphere:latest .
           docker push $DOCKER_USERNAME/authsphere:latest
 
+      - name: Prepare EC2 Directories
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            sudo mkdir -p /home/ubuntu/authsphere/app_logs
+            sudo mkdir -p /home/ubuntu/authsphere/mariadb_data
+            sudo mkdir -p /home/ubuntu/authsphere/db
+            sudo chmod -R 777 /home/ubuntu/authsphere
+
+      # Copy docker-compose.yml and db/ to EC2
+      - name: docker-compose.yml and db/ to EC2
+        uses: appleboy/scp-action@v0.1.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          source: "docker-compose.yml,db/"
+          target: "/home/ubuntu/authsphere/"
+
       - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
-          envs: DOCKER_USERNAME,DOCKER_PASSWORD # Pass secrets as env variables
+          envs: DOCKER_USERNAME,DOCKER_PASSWORD,MYSQL_ROOT_PASSWORD # Pass secrets as env variables
           script: |
             printf "%s" "$DOCKER_PASSWORD" | sudo docker login -u "$DOCKER_USERNAME" --password-stdin
             sudo docker pull $DOCKER_USERNAME/authsphere:latest
-            sudo docker stop authsphere || true
-            sudo docker rm authsphere || true
-            sudo docker run -d \
-            --env-file /home/ubuntu/authsphere/.env \
-            -p 80:8000 \
-            --name authsphere \
-            -v /home/ubuntu/authsphere/app_logs:/app/logs \
-            $DOCKER_USERNAME/authsphere:latest
+
+            sudo docker-compose -f /home/ubuntu/authsphere/docker-compose.yml down
+            sudo docker-compose -f /home/ubuntu/authsphere/docker-compose.yml up -d
