--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,11 +79,26 @@ jobs:
           envs: DOCKER_USERNAME,DOCKER_PASSWORD,MYSQL_ROOT_PASSWORD # Pass secrets as env variables
           script: |
 
-            # Install Docker Compose
-            sudo apt-get update && sudo apt-get install docker-compose-plugin
+            # Install Docker if missing
+            if ! command -v docker &> /dev/null; then
+                echo "Installing Docker..."
+                curl -fsSL https://get.docker.com | sudo sh
+            fi
+
+            # Install Docker Compose plugin with proper repo setup
+            sudo mkdir -p /etc/apt/keyrings
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+            sudo apt-get update
+            sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-compose-plugin
+
+            # Verify installations
+            sudo docker --version
+            sudo docker compose version
 
             printf "%s" "$DOCKER_PASSWORD" | sudo docker login -u "$DOCKER_USERNAME" --password-stdin
             sudo docker pull $DOCKER_USERNAME/authsphere:latest
 
-            sudo docker-compose -f /home/ubuntu/authsphere/docker-compose.yml down
-            sudo docker-compose -f /home/ubuntu/authsphere/docker-compose.yml up -d
+            sudo docker compose -f /home/ubuntu/authsphere/docker-compose.yml down
+            sudo docker compose -f /home/ubuntu/authsphere/docker-compose.yml up -d
