free up space before pulling the docker image and running docker compose

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -97,6 +97,10 @@ jobs:
             sudo docker --version
             sudo docker compose version
 
+            # Clean up Docker resources to free space
+            sudo docker system prune -f
+            sudo docker volume prune -f
+
             printf "%s" "$DOCKER_PASSWORD" | sudo docker login -u "$DOCKER_USERNAME" --password-stdin
             sudo docker pull $DOCKER_USERNAME/authsphere:latest
 
