--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,11 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pytest  # Run tests
+
+      - name: Run tests
+        run: pytest tests/ # Run tests
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
